# ai-ml-template

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Makefile  README.md  conda-lock.yml  environment.yaml  genindex.html  intro.html  markdown-notebooks.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.dvc/: config
.github/workflows/: python-package-conda.yml
_sources/course1/chapter1/: main.md
_sources/course1/chapter2/: main.ipynb
_sources/sample/: sample.ipynb
course1/chapter1/: main.html
course1/chapter2/: main.html  section1.html
course2/chapter1/: main.html
course2/chapter2/: main.html  section1.html
notebooks/: _toc.yml  notebooks.ipynb
notebooks/course1/chapter1/: main.md
notebooks/course1/chapter2/: main.ipynb  section1.md
notebooks/course2/chapter1/: main.md
notebooks/course2/chapter2/: main.ipynb
notebooks/sample/: sample.ipynb
sample/: sample.html
src/codility/: BinaryGap.py  CyclicRotation.py  OddOccurrences.py
tests/codility/: test_BinaryGap.py  test_CyclicRotation.py  test_OddOccurrences.py
tests/fact/: test_fact.py
