[tool.poetry]
name = "ai-ml-template"
version = "0.1.0"
description = ""
authors = ["Akhil Karra <akhil.karra@me.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11.5"
numpy = "^1.26.3"
scipy = "^1.11.4"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
nltk = "^3.8.1"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
